--- a/assets/scss/site/_header.scss
+++ b/assets/scss/site/_header.scss
@@ -1,1 +1,34 @@
-// Header specific styles here 
+// Header specific styles here
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: $small-space $large-space;
+	background-color: #ffffff;
+	@include z-index(navigation);
+	@media #{$smallOnly}{
+		display: none;
+	}
+	ul {
+		margin: 0;
+		display: flex;
+		align-items: stretch;
+		justify-content: space-between;
+		li {
+			display: block;
+			flex: 0 1 auto;
+			list-style-type: none;
+			display: inline-flex;
+			a {
+				text-transform: uppercase;
+                font-size: rem-calc(12px);
+				&:hover,
+				&:focus,
+				&:active {
+					border-bottom: 2px solid $secondary;
+				}
+			}
+		}
+	}
+}
