--- a/assets/scss/base/_custom.scss
+++ b/assets/scss/base/_custom.scss
@@ -106,18 +106,18 @@ p {
 	}
 	// small print
 	&.small {
-		font-size: rem-calc(10);
+		font-size: rem-calc(10px);
 	}
 }
 
 small,
 .small {
-	font-size: rem-calc(10);
+	font-size: rem-calc(10px);
 	font-weight: 400;
 }
 
 .large {
-	font-size: rem-calc(18);
+	font-size: rem-calc(18px);
 	font-weight: 400;
 }
 
@@ -202,7 +202,7 @@ code {
 	border-radius: $border-radius;
 	color: $primary;
 	font-size: $body-font-size;
-	line-height: rem-calc(30);
+	line-height: rem-calc(30px);
 	padding: $small-space;
 }
 
