--- a/assets/scss/site/_layout.scss
+++ b/assets/scss/site/_layout.scss
@@ -15,7 +15,7 @@ strong:not(.alone) {
 	margin-bottom: $medium-space;
 	margin-top: $large-space;
 	.row {
-		font-size: 11px;
+		font-size: $body-font-size;
 		line-height: 2rem;
 		.columns {
 			background: #eee;
@@ -36,40 +36,6 @@ strong:not(.alone) {
 
 .control {
 	margin-top: $small-space;
-}
-
-nav {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	padding: $small-space $large-space;
-	background-color: #ffffff;
-	@include z-index(navigation);
-	@media #{$smallOnly}{
-		display: none;
-	}
-	ul {
-		margin: 0;
-		display: flex;
-		align-items: stretch;
-		justify-content: space-between;
-		li {
-			display: block;
-			flex: 0 1 auto;
-			list-style-type: none;
-			display: inline-flex;
-			a {
-				font-size: rem-calc(10);
-				text-transform: uppercase;
-				&:hover,
-				&:focus,
-				&:active {
-					border-bottom: 2px solid $secondary;
-				}
-			}
-		}
-	}
 }
 
 
