Updated rem function

--- a/assets/scss/base/_buttons.scss
+++ b/assets/scss/base/_buttons.scss
@@ -10,7 +10,7 @@ input[type="button"] {
 	color: #ffffff;
 	margin: 0;
 	padding: 0 ($small-space * 3);
-	font-size: rem-calc(11px);
+	font-size: rem-calc(11);
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
