--- a/assets/scss/base/_settings.scss
+++ b/assets/scss/base/_settings.scss
@@ -42,6 +42,6 @@ $snapchat: #f8ec1e;
 
 
 
-// anchor styles
+// font sizes
 $anchor-font-color: $primary;
-$body-font-size: rem-calc($body-font-size);
+$body-font-size: rem-calc($font-size);
