--- a/assets/scss/site/_settings.scss
+++ b/assets/scss/site/_settings.scss
@@ -12,7 +12,7 @@ $palette: (
 );
 
 // global
-$body-font-size: 13px;
-$body-background: #fff;
+$font-size: 14;
+$body-background: #ffffff;
 $body-font-color: #53596C;
 $body-font-family: 'Open Sans', sans-serif;
