--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -12,7 +12,7 @@ $palette: (
 );
 
 // global
-$font-size: 14;
+$body-font-size: rem-calc(14);
 $body-background: #ffffff;
 $body-font-color: #53596C;
 $body-font-family: 'Open Sans', sans-serif;
