--- a/assets/scss/base/_grid.scss
+++ b/assets/scss/base/_grid.scss
@@ -13,14 +13,15 @@ $breakpoint-xlarge: 1440px !default;
 
 // set your queries
 $small : '(min-width: 0)';
-$smallOnly : '(max-width: ' + $breakpoint-small + ')';
+$small-only : '(max-width: ' + $breakpoint-small + ')';
 $medium: '(min-width: ' + ($breakpoint-small + 1) + ')';
-$mediumOnly: '(min-width: ' + $breakpoint-small + ') and (max-width: ' + ($breakpoint-medium - 1) + ')';
-$mediumDown: '(max-width: ' + ($breakpoint-medium) + ')';
+$medium-only: '(min-width: ' + $breakpoint-small + ') and (max-width: ' + ($breakpoint-medium - 1) + ')';
+$medium-down: '(max-width: ' + ($breakpoint-medium) + ')';
 $large: '(min-width: ' + $breakpoint-medium + ')';
-$largeOnly: '(min-width: ' + $breakpoint-medium + ') and (max-width: ' + ($breakpoint-xlarge - 1) + ')';
-$largeDown: '(max-width: ' + $breakpoint-large + ')';
+$large-only: '(min-width: ' + $breakpoint-medium + ') and (max-width: ' + ($breakpoint-xlarge - 1) + ')';
+$large-down: '(max-width: ' + $breakpoint-large + ')';
 $xlarge: '(min-width: ' + $breakpoint-xlarge + ')';
+$xlarge-down: '(max-width: ' + $breakpoint-large + ') and (max-width: ' + $breakpoint-xlarge + ')';
 
 // map your points
 $breakpoints: (
@@ -61,6 +62,18 @@ $breakpoints: (
 	}
 }
 
+// create text based alignments
+@mixin create-hiders($name) {
+	// align texts center
+	.hide-for-#{$name} {
+		display: none!important;
+	}
+	// .. left
+	.show-for-#{$name} {
+		display: inline-flex!important;
+	}
+}
+
 // create the grid within the MQ points
 @each $breakpoint in $breakpoints {
 	$name: nth($breakpoint, 1);
@@ -69,6 +82,7 @@ $breakpoints: (
 	@media screen and #{$declaration} {
 		@include create-grid($name);
 		@include create-alignments($name);
+		@include create-hiders($name);
 	}
 }
 
@@ -83,7 +97,7 @@ $breakpoints: (
 	max-width: $grid-max-width;
 	margin: 0 auto;
 	padding: 0 calc(#{$grid-gutter-medium} / 2);
-	@media #{$smallOnly} {
+	@media #{$small-only} {
 		padding: 0 calc(#{$grid-gutter-small} / 2);
 	}
 }
@@ -122,7 +136,7 @@ $breakpoints: (
 		flex-grow: 1;
 		padding-left: calc(#{$grid-gutter-medium} / 2);
 		padding-right: calc(#{$grid-gutter-medium} / 2);
-		@media #{$smallOnly} {
+		@media #{$small-only} {
 			padding-left: calc(#{$grid-gutter-small} / 2);
 			padding-right: calc(#{$grid-gutter-small} / 2);
 		}
