--- a/assets/scss/base/_settings.scss
+++ b/assets/scss/base/_settings.scss
@@ -1,3 +1,6 @@
+// import site specific styles first
+@import '../site/config.scss';
+
 // mixins to use
 @import 'mixins';
 
@@ -40,8 +43,5 @@ $pinterest: #bd081c;
 $etsy: #d5641c;
 $snapchat: #f8ec1e;
 
-
-
-// font sizes
+// anchor styles
 $anchor-font-color: $primary;
-$body-font-size: rem-calc($font-size);
