--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -15,4 +15,6 @@ $palette: (
 $body-font-size: rem-calc(14);
 $body-background: #ffffff;
 $body-font-color: #53596C;
+
+// Loaded from Google Fonts in the header
 $body-font-family: 'Open Sans', sans-serif;
