--- a/assets/scss/base/_mixins.scss
+++ b/assets/scss/base/_mixins.scss
@@ -1,5 +1,72 @@
-// import site specific styles first
-@import '../site/settings.scss';
+//Rem Calc
+@function rem-calc($font-size) {
+	$rem-size: $font-size / 16;
+	@return #{$rem-size}rem;
+}
+
+// import site specific styles after the rem math
+@import '../site/config.scss';
+
+// Headline
+@mixin heading {
+	color: inherit;
+	font-weight: 500;
+	font-style: normal;
+	text-rendering: optimizeLegibility;
+	margin-top: 0;
+	margin-bottom: ($small-space * 3);
+	line-height: normal;
+	padding: 0;
+}
+
+@mixin h1 {
+	@include heading;
+	font-size: rem-calc(40);
+	@include breakpoint($small-only) {
+		font-size: rem-calc(30);
+	}
+}
+
+@mixin h2 {
+	@include heading;
+	font-size: rem-calc(25);
+	@include breakpoint($small-only) {
+		font-size: rem-calc(20);
+	}
+}
+
+@mixin h3 {
+	@include heading;
+	font-size: rem-calc(25);
+	@include breakpoint($small-only) {
+		font-size: rem-calc(18);
+	}
+}
+
+@mixin h4 {
+	@include heading;
+	font-size: rem-calc(20);
+	@include breakpoint($small-only) {
+		font-size: rem-calc(16);
+	}
+}
+
+@mixin h5 {
+	@include heading;
+	font-size: rem-calc(18);
+	@include breakpoint($small-only) {
+		font-size: rem-calc(14);
+	}
+}
+
+@mixin h6 {
+	@include heading;
+	font-size: rem-calc(16);
+	@include breakpoint($small-only) {
+		font-size: rem-calc(14);
+	}
+}
+
 
 //button generators
 @mixin button-bg($bg, $txt) {
@@ -43,71 +110,6 @@
 	}
 }
 
-// Rem Calc
-@function rem-calc($font-size) {
-	$rem-size: $font-size / 16;
-	@return #{$rem-size}rem;
-}
-
-// Headline
-@mixin heading {
-	color: inherit;
-	font-weight: 500;
-	font-style: normal;
-	text-rendering: optimizeLegibility;
-	margin-top: 0;
-	margin-bottom: ($small-space * 3);
-	line-height: normal;
-	padding: 0;
-}
-
-@mixin h1 {
-	@include heading;
-	font-size: rem-calc(40);
-	@include breakpoint($smallOnly) {
-		font-size: rem-calc(30);
-	}
-}
-
-@mixin h2 {
-	@include heading;
-	font-size: rem-calc(30);
-	@include breakpoint($smallOnly) {
-		font-size: rem-calc(20);
-	}
-}
-
-@mixin h3 {
-	@include heading;
-	font-size: rem-calc(25);
-	@include breakpoint($smallOnly) {
-		font-size: rem-calc(18);
-	}
-}
-
-@mixin h4 {
-	@include heading;
-	font-size: rem-calc(20);
-	@include breakpoint($smallOnly) {
-		font-size: rem-calc(16);
-	}
-}
-
-@mixin h5 {
-	@include heading;
-	font-size: rem-calc(18);
-	@include breakpoint($smallOnly) {
-		font-size: rem-calc(14);
-	}
-}
-
-@mixin h6 {
-	@include heading;
-	font-size: rem-calc(16);
-	@include breakpoint($smallOnly) {
-		font-size: rem-calc(14);
-	}
-}
 
 // set the standard for the pseufo code block
 @mixin pseudo($display: block, $pos: absolute, $content: ''){
