--- a/assets/scss/site/_header.scss
+++ b/assets/scss/site/_header.scss
@@ -1,20 +1,22 @@
 // Header specific styles here
-nav {
+nav:not(.main-menu) {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	padding: $small-space $large-space;
+	padding-right: 80px;
 	background-color: #ffffff;
 	@include z-index(navigation);
-	@media #{$small-only}{
-		display: none;
-	}
-	ul {
+
+	ul:not(.drawerMenu) {
 		margin: 0;
 		display: flex;
 		align-items: stretch;
 		justify-content: space-between;
+		@media #{$small-only}{
+			display: none;
+		}
 		li {
 			display: block;
 			flex: 0 1 auto;
@@ -31,4 +33,10 @@ nav {
 			}
 		}
 	}
+}
+
+
+a.menu-close,
+a.menu-toggle {
+	z-index: 101;
 }
