--- a/assets/scss/base/_drawer.scss
+++ b/assets/scss/base/_drawer.scss
@@ -1,8 +1,7 @@
 $menuWidth: 200px;
-
 a.menu-close,
 a.menu-toggle {
-	display: inline-block;
+	display: none;
 	font-size: rem-calc(14);
 	position: absolute;
 	right: ($small-space * 3);
@@ -12,8 +11,10 @@ a.menu-toggle {
 	&:hover, &:focus {
 		color: darken($body-font-color, 15%);
 	}
+	@media #{$small-only}{
+		display: inline-block;
+	}
 }
-
 .main-menu {
 	position: absolute;
 	right: -$menuWidth;
@@ -37,8 +38,10 @@ a.menu-toggle {
 		min-height: 100%;
 		width: $menuWidth;
 		background: #ffffff;
+		height: 100vh;
 		li {
 			display: block;
+			padding-bottom: 0;
 			a {
 				display: block;
 				padding: ($small-space * 2) ($small-space * 3);
@@ -46,9 +49,17 @@ a.menu-toggle {
 				color: $body-font-color;
 				text-decoration: none;
 			}
+			.sub-menu {
+				padding-top: 0;
+				li {
+					// hide description
+					p {
+						display: none;
+					}
+				}
+			}
 		}
 	}
-
 	&:target,
 	&[aria-expanded=true] {
 		right: 0;
