--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -18,3 +18,4 @@ $body-font-color: #53596C;
 
 // Loaded from Google Fonts in the header
 $body-font-family: 'Open Sans', sans-serif;
+$header-font-family: 'Open Sans', sans-serif;
