--- a/assets/scss/site/_header.scss
+++ b/assets/scss/site/_header.scss
@@ -40,3 +40,15 @@ a.menu-close,
 a.menu-toggle {
 	z-index: 101;
 }
+
+a.menu-toggle {
+	top: 80px;
+}
+a.menu-close {
+	top: 10px;
+}
+
+.main-menu {
+	top: 69px;
+	background-color: #ffffff;
+}
