Updating warning, error, alert & success colours

--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -4,10 +4,10 @@ $palette: (
 	primaryText: #fcf8f4,
 	secondary: #ebc7ba,
 	secondaryText: #697280,
-	success: #c9e4bf,
-	error: #d38a8a,
-	alert: #d38a8a,
-	warning: #d29075,
+	success: #4caf50,
+	error: #f44336,
+	alert: #ff9800,
+	warning: #00bcd4,
 	light-grey: #c4c5c5
 );
 
