Moved global grid width to the main config

--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -15,6 +15,7 @@ $palette: (
 $body-font-size: rem-calc(14);
 $body-background: #ffffff;
 $body-font-color: #53596C;
+$global-width: 1200px;
 
 // Loaded from Google Fonts in the header
 $body-font-family: 'Open Sans', sans-serif;
